--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "keywords": [
     "Link Slot",
     "Situs Slot",
-    "Slot Gacor",
-    "Slot Bonus 100",
-    "Slot Bonus New Member 100"
+    "Slot Pusa",
+    "Slot Deposit 5000",
+    "Slot Deposit Tanpa Potongan"
   ],
   "repository": "https://github.com/mawarslot123/bulu3.git",
   "license": "MIT",
